# skeletonkey

./: .env.example  Dockerfile  LICENSE  LambdaHandler.py  README.md  alt_main.py  dbx.py  dev-requirements.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: run_test.yml
Notebooks/: TestNotebook.py
RecordTypes/: Credentials.py  CredentialsReply.py  DoSomething.py  Keys.py  NewUserToken.py  Step.py  StepImplementation.py  TestContext.py  User.py  UserToken.py
tests/: test_records.py
tests/Docker Tests/: Test Command.yml  opencollection.yml
tests/Docker Tests/environments/: Local.yml
