[project]
name = "skeletonkey"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "camel-converter==5.1.0",
    "coverage>=7.13.5",
    "databricks-sdk==0.99.0",
    "httpx>=0.28.1",
    "mypy>=2.0.0",
    "orjson>=3.11.9",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv==1.2.2",
    "rich==14.3.3",
    "ruff>=0.15.12",
    "snowflake-connector-python>=4.3.0",
]
